clusters/main/kubernetes/apps/karakeep/app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: karakeep
  annotations:
    volsync.backube/privileged-movers: "true"
