clusters/main/kubernetes/apps/karakeep/app/patch-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  annotations:
    kustomize.toolkit.fluxcd.io/force: enabled
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        reloader.stakater.com/auto: "true"
        reloader.stakater.com/rollout-strategy: restart
    spec:
      automountServiceAccountToken: false
      nodeSelector:
        kubernetes.io/arch: amd64
      securityContext:
        fsGroup: 568
        fsGroupChangePolicy: OnRootMismatch
        supplementalGroups:
          - 568
      terminationGracePeriodSeconds: 60
      containers:
        - name: web
          readinessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 12
            timeoutSeconds: 5
            successThreshold: 2
            failureThreshold: 4
          livenessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 12
            periodSeconds: 15
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 5
          startupProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 60
          resources:
            requests:
              cpu: 75m
              memory: 200Mi
            limits:
              cpu: 1500m
              memory: 2400Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              add:
                - CHOWN
                - SETUID
                - SETGID
                - FOWNER
                - DAC_OVERRIDE
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: false
            runAsUser: 0
            runAsGroup: 0
            seccompProfile:
              type: RuntimeDefault
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: hoarder-app-template-data-longhorn
