clusters/main/kubernetes/apps/karakeep/app/meilisearch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: karakeep-meilisearch
spec:
  selector:
    app.kubernetes.io/name: karakeep
    app.kubernetes.io/instance: karakeep
    app.kubernetes.io/component: meilisearch
  ports:
    - name: meili
      port: 7700
      targetPort: meili
      protocol: TCP
  type: ClusterIP
