clusters/main/kubernetes/apps/karakeep/app/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: karakeep-web
spec:
  selector:
    app.kubernetes.io/name: karakeep
    app.kubernetes.io/instance: karakeep
    app.kubernetes.io/component: web
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
  type: ClusterIP
